--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "tailwind.config.js",
   "scripts": {
     "dev": "npx tailwindcss -i ./src/input.css -o ./public/style.css --watch",
-    "build": "npx tailwindcss -i ./src/input.css -o ./public/style.css --watch"
+    "build": "npx tailwindcss -i ./src/input.css -o ./public/style.css "
 
   },
   "keywords": [],
